clean csv parts

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ train_credit_bureau_a_2_7.csv
 train_credit_bureau_a_2_8.csv
 train_credit_bureau_a_2_9.csv
 train_credit_bureau_a_2_10.csv
+part1_main_data.csv
+part2_main_data.csv
+part3_main_data.csv
